# holochain

./: Cargo.toml  flake.nix  hir.out
.config/: nextest-args.nix  test-args.nix
.github/actions/update/: action.yml
.github/workflows/: build.yml  holochain-build-and-test.yml  release.yml  update-dispatch.yml
crates/debug-build/: Cargo.toml
crates/hcdev/: Cargo.toml
crates/hcdev/src/: dht.rs  lib.rs
crates/hdi/: Cargo.toml
crates/hdi/src/: op.rs
crates/hdk/: Cargo.toml
crates/hdk/src/: entry.rs
crates/holochain/: CHANGELOG.md  Cargo.toml
crates/holochain/benches/: consistency.rs
crates/holochain/src/: conductor.rs  local_network_tests.rs  test_utils.rs
crates/holochain/tests/: too_big.rs
crates/holochain_conductor_api/: CHANGELOG.md  Cargo.toml
crates/holochain_conductor_api/src/: app_interface.rs
crates/holochain_integrity_types/src/: chain.rs  op.rs
crates/holochain_node/: Cargo.toml
crates/holochain_node/src/: lib.rs
crates/holochain_node/tests/: test.rs
crates/holochain_p2p/: Cargo.toml
crates/holochain_sqlite/: Cargo.toml
crates/holochain_state/: Cargo.toml
crates/holochain_types/: Cargo.toml
crates/holochain_websocket/: Cargo.toml
crates/holochain_zome_types/: Cargo.toml
crates/megadep/: Cargo.toml
docker/: Dockerfile.latest
holonix/: README.md
nix/modules/: devShells.holonix.nix  devShells.nix  holochain-crate2nix.nix  holochain.nix  lair.nix  launcher.nix  release-automation.nix  rust.nix  scaffolding.nix  scripts.nix  srcCleaned.nix
versions/0_1/: flake.nix
versions/0_2/: flake.nix
(+152 files in other folders)
