[package]
name = "holochain_dev_cli"
version = "0.1.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_dev_cli"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo" ]
categories = [ "command-line-utilities", "development-tools::build-utils", "filesystem" ]
edition = "2021"
license = "Apache-2.0"
description = "Provides the `hcdev` binary, a collection of utilities useful for Holochain developers."

[[bin]]
name = "hcdev"
path = "bin/hcdev.rs"

[lib]
name = "holochain_dev_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
kitsune_p2p_dht = "0.1"
kitsune_p2p_dht_arc = "0.1"
observability = "0.1.3"
structopt = "0.3"
tokio = { version = "1.11", features = [ "full" ] }
