[package]
name = "holochain_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2"
derive_more = "0.99"
tokio = { version = "1.11", features = ["full"]}

holochain_keystore = { path = "../holochain_keystore" }
holochain_integrity_types = { path = "../holochain_integrity_types" }
holo_hash = { path = "../holo_hash" }
